--- a/report/main.tex
+++ b/report/main.tex
@@ -215,7 +215,7 @@ These features are obtained in a 2-level process. First, the Low Level Descripto
 \end{itemize}
 \end{multicols}
 
-Then, 47 features, High Statistical Functions of these 23 features are calculated in two sets by utilizing the mean and standard deviation. In addition, authors defined an extra feature: Silence. The silence is defined as the ratio of the silent frames per utterance. 
+Then, 47 features, High Statistical Functions of these 23 features are calculated in two sets by utilizing the mean and standard deviation of nodes in dimension $(3409 \times 23)$. The authors defined an extra feature. The silence is defined as the ratio of the silent frames per utterance. 
 
 \begin{align}
     S &= \frac{N_s}{N_t} & Threshold &= 0.3 \times X_{RMS}
